# gang

./: Cargo.toml  README.md
gang/: Cargo.toml
gang-macros/: Cargo.toml
gang-macros/src/: lib.rs  util.rs
gang-macros/src/generate/: kvector.rs  mod.rs  rot.rs
gang/examples/: rotation.rs
gang/src/: lib.rs  main.rs
